--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -107,3 +107,10 @@ add_custom_target(
     HLSL_Shaders
     DEPENDS ${HLSL_SPIRV_BINARY_FILES}
 )
+
+add_custom_target(run
+    COMMAND ${CMAKE_COMMAND} -E env $<TARGET_FILE:LearnVulkanDemos_00_HelloWindow>
+    DEPENDS "LearnVulkanDemos_00_HelloWindow"
+    WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
+    VERBATIM
+)
